--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,6 @@
 <!-- start custom head snippets -->
 
-<!-- insert favicons. use https://realfavicongenerator.net/ -->
+<link rel="shortcut icon" href="/assets/images/meijunrichang_favicon.ico" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3057293365933934" crossorigin="anonymous"></script>
 
 <!-- end custom head snippets -->
